# stable-diffusion-cpp-node-api

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  smoke.js  smoke_abort.js  smoke_hires.js
.github/workflows/: prebuild.yml
docs/: API.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
patches/: 0001-conditioner-sd3-pooled-rank-mismatch.patch  0002-conditioner-sd3-chunk-overrun.patch  0003-denoiser-ays-sd2-broken-fallthrough.patch  0004-ggml-extend-cancel-checkpoint.patch
scripts/: apply-patches.js  sync-versions.js
src/cpp/: abort_helper.h  addon.cpp  sd_context.cpp  sd_context.h  upscaler_context.cpp  upscaler_context.h
src/cpp/callbacks/: log_callback.h  preview_callback.h  progress_callback.h
src/cpp/helpers/: image_helpers.cpp  image_helpers.h  params_converter.cpp  params_converter.h
src/cpp/workers/: convert_worker.h  create_context_worker.h  extract_metadata_worker.h  generate_image_worker.h  generate_video_worker.h  upscale_worker.h
src/js/: index.d.ts  index.js  load-bindings.js
test/: basic.js
